# ai-omni

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
core/: app.py
core/db/: config.py  counter.py  engine.py  models.py
core/db/migrations/: env.py
core/db/migrations/versions/: 58c3fb97eb42_add_formatter.py  82406e6a8927_database_creation.py
core/handlers/: error.py  generate.py  start.py
core/middlewares/: access.py
core/states/: user.py
core/utils/: ai.py  config.py
tests/: utils.py
tests/test_handler/: test_base.py
