[tool.black]
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.poetry]
name = "ai-omni"
version = "0.1.0"
description = "This is a GPT-4 Omni version chat integrated into a Telegram bot via the ProxyAPI service"
authors = ["Maksim <mksmvnv@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.6.0"
openai = "^1.30.3"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.3.3"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
